[tool.poetry]
name = "putioutils"
version = "0.1.0"
description = ""
authors = ["Eduardo Oliveira <me@eduardooliveira.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
setuptools = "^75.6.0"
putio-py = "^8.7.0"
python-dotenv = "^1.0.1"
prettytable = "^3.12.0"
humanize = "^4.11.0"
pytz = "^2024.2"
click = "^8.1.8"

[tool.poetry.scripts]
putio-list = "putioutils.list:run"
putio-rmold = "putioutils.rmold:run"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.2"
pyright = "^1.1.391"
var-dump = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
